--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,72 @@
-requests>=2,<3
-fastapi[standard]>=0.115,<1
-uvicorn>=0.24,<1
-pydantic>=2,<3
-pydantic-settings>=2,<3
-boto3>=1.33,<2
-urllib3<2
-duckdb>=1,<2
-psycopg2-binary>=2.9,<3
-sqlalchemy>=2,<3
-pymongo>=4,<5
-httpx>=0.25,<1
-pytest>=7,<8
-pytest-cov>=4,<5
-pytest-env>=0.8,<1
-pytest-asyncio>=0.21,<1
-ruff>=0.1,<1
-moto>=4,<5
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+boto3==1.42.54
+botocore==1.42.54
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+coverage==7.13.4
+cryptography==46.0.5
+dnspython==2.8.0
+duckdb==1.4.4
+email-validator==2.3.0
+fastapi==0.129.2
+fastapi-cli==0.0.23
+fastapi-cloud-cli==0.13.0
+fastar==0.8.0
+greenlet==3.3.2
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+iniconfig==2.3.0
+Jinja2==3.1.6
+jmespath==1.1.0
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+moto==4.2.14
+packaging==26.0
+pluggy==1.6.0
+psycopg2==2.9.11
+psycopg2-binary==2.9.11
+pycparser==3.0
+pydantic==2.12.5
+pydantic-extra-types==2.11.0
+pydantic-settings==2.13.1
+pydantic_core==2.41.5
+Pygments==2.19.2
+pymongo==4.16.0
+pytest==7.4.4
+pytest-asyncio==0.23.8
+pytest-cov==4.1.0
+pytest-env==0.8.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-multipart==0.0.22
+PyYAML==6.0.3
+requests==2.32.5
+responses==0.26.0
+rich==14.3.3
+rich-toolkit==0.19.4
+rignore==0.7.6
+ruff==0.15.2
+s3transfer==0.16.0
+sentry-sdk==2.53.0
+shellingham==1.5.4
+six==1.17.0
+SQLAlchemy==2.0.46
+starlette==0.52.1
+typer==0.24.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==1.26.20
+uvicorn==0.41.0
+watchfiles==1.1.1
+websockets==16.0
+Werkzeug==3.1.6
+xmltodict==1.0.4
